testsuite/tests/printing-types/ghost_types_bad.ml
(* TEST
* expect
*)
module M : sig
  class c : object end
end = struct
  (* no definition of a class c *)
end;;

[%%expect {|
Lines 3-5, characters 6-3:
3 | ......struct
4 |   (* no definition of a class c *)
5 | end..
Error: Signature mismatch:
       Modules do not match:
         sig end
       is not included in
         sig class c : object  end end
       The class `c' is required but not provided
       The class type `c/2' is required but not provided
       The type `c/3' is required but not provided
       The type `#c' is required but not provided
|}]
(* The output above is not, strictly-speaking, incorrect, but the error
   message has a usability bug: it mentions "ghost items"
   that are generated by the type-checker.

   The error message should only mention non-ghost items, that are
   visible to the user.

   This behavior has been around since at least 3.12, possibly forever.
*)
